code refactoring; shape processor